v1.0, 2012-03-13 -- Initial Release
v1.1, 2012-03-22 -- Add ability to use ESRI premium tasks.
v1.2, 2012-04-04 -- Add Citizen Atlas (Washington DC) as a supported geocoder.
v1.3, 2012-04-20 -- Add ESRI SOAP locators as supported geocoders. Added suds
dependency